--- a/apple/css/style2.css
+++ b/apple/css/style2.css
@@ -45,3 +45,35 @@ body{
 .navbar-brand p span {
 	vertical-align: middle;
 }
+
+#nav-list{
+	margin-top: 10px;
+}
+
+#nav-list a{
+	color: #DFF2F2;
+	text-align: center;
+}
+
+#nav-list a:hover {
+	background: #60BFBF;
+}
+
+#nav-list a span {
+	font-size: 1.8em;
+}
+
+#phone{
+	margin-top: 5px;
+}
+
+#phone a {
+	text-align: right;
+	padding-bottom: 0;
+}
+
+#phone div {
+	color: #F2D1B3;
+	text-align: right;
+	padding-right: 15px;
+}
