--- a/apple/css/style2.css
+++ b/apple/css/style2.css
@@ -165,6 +165,39 @@ body{
 	color: #DFF2F2;
 	background-color: #32838C;
 }
+/* End main page*/
+
+/*menu categories page*/
+
+.category-tile {
+	position: relative;
+	overflow: hidden;
+	height: 200px;
+	width: 200px;
+	margin:  0 auto 15px;
+}
+
+.category-tile span{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+	text-transform: uppercase;
+	color: #DFF2F2;
+	border-top: 1px solid #DFF2F2;
+}
+.category-tile:hover {
+	box-shadow: 0 1px 5px 1px #BFBFBF;
+}
+#first-title + div {
+	margin-bottom: 50px;
+}
+
+
+
+
 
 /********** Large devices only **********/
 @media (min-width: 1200px) {
