--- a/apple/css/style2.css
+++ b/apple/css/style2.css
@@ -7,18 +7,15 @@ body{
 	border-radius: 0;
 	border: 0; 
 }
-
 #logo-img{
 	background:url('../images/this-is-a-logo.png') no-repeat;
 	width: 150px;
 	height: 150px;
 	margin: 10px 15px 10px 0;
 }
-
 .navbar-brand{
 	padding: 25px;
 }
-
 .navbar-brand h1{
 	font-family: 'Nunito', sans-serif;
 	color: #F2D1B3;
@@ -35,51 +32,42 @@ body{
 .navbar-brand a:hover {
 	text-decoration: none;
 }
-
 .navbar-brand p {
 	color:#DFF2F2;
 	text-transform: uppercase;
 	font-size: .7em;
 	margin-top: 15px;
 }
-
 .navbar-brand p span {
 	vertical-align: middle;
 }
-
 #nav-list{
 	margin-top: 10px;
 }
-
 #nav-list a{
 	color: #DFF2F2;
 	text-align: center;
 }
-
 #nav-list a:hover {
-	background: #60BFBF;
+	background-color: #DFF2F2;
+	color: #32838C;
 }
-
 #nav-list a span {
 	font-size: 1.8em;
 }
-
 #phone{
 	margin-top: 5px;
 }
-
 #phone a {
 	text-align: right;
 	padding-bottom: 0;
 	font-size: .8em;
 }
-
 #phone div {
 	color: #F2D1B3;
 	text-align: right;
 	padding-right: 15px;
 }
-
 .navbar-header button.navbar-toggle,
 .navbar-header .icon-bar {
 	border: 1px solid #DFF2F2; 
@@ -89,7 +77,9 @@ body{
 	clear: both;
 	margin-top: -30px;
 }
-
+ .navbar-default .navbar-nav>.active>a {
+ 	background-color: #60BFBF;
+ }
 /* END HEADER */
 
 /*end header*/
@@ -139,21 +129,17 @@ body{
 	/*border: 2px solid #60BFBF;*/
 	overflow: hidden;
 }
-
 #first-tile:hover, #faces-tile:hover, #map-tile:hover{
 	box-shadow: 0 1px 5px 1px #BFBFBF;
 }
-
 #first-tile {
 	background: url('../images/first-tile.jpg') no-repeat;
 	background-position: center;
 }
-
 #faces-tile {
 	background: url('../images/faces-tile.jpg') no-repeat;
 	background-position: center;
 }
-
 #first-tile span, #faces-tile span, #map-tile span {
 	position: absolute;
 	bottom: 0;
@@ -176,7 +162,6 @@ body{
 	width: 200px;
 	margin:  0 auto 15px;
 }
-
 .category-tile span{
 	position: absolute;
 	bottom: 0;
@@ -195,7 +180,52 @@ body{
 	margin-bottom: 50px;
 }
 
+/**end of menu categories**/
 
+/*First block page*/
+
+.item-tile{
+	margin-bottom: 25px;
+}
+
+.item-tile .item-price {
+	font-size: 1.1em;
+	text-align: right;
+	margin-top: -15px;
+	margin-right: -15px;
+}
+.item-tile .item-price span {
+	font-size: .6em;
+}
+.item-photo {
+	position: relative;
+	/*border: 2px solid #60BFBF;*/
+	overflow: hidden;
+	padding: 0;
+	margin-right: -15px;
+	margin-left: auto;
+	margin-bottom: 20px;
+	max-width: 250px;
+}
+.item-photo div {
+	position: absolute;
+	bottom:0;
+	right: 0;
+	width: 80px;
+	background-color: #60BFBF;
+	text-align: center;
+}
+.item-description {
+	padding-right: 30px;
+}
+h3.item-title {
+	margin: 0 0 10px;
+}
+.item-details {
+	font-size: .9em;
+	font-style: italic;
+}
+ /*end first block page*/
 
 
 
@@ -322,6 +352,21 @@ body{
   	margin: 0 auto 15px;
   }
 
+    /*first block page*/
+  
+  .item-photo {
+  	margin-right: auto;
+  }
+  .item-tile .item-price {
+  	text-align: center;
+  }
+  .item-description {
+  	text-align: left;
+  	width: 280px;
+  	margin: auto;
+  	padding-top: 20px;
+  }
+
 }
 
   /******* Super extra small devices Only ******/
@@ -342,5 +387,19 @@ body{
     padding-left: 15px;
     float: left;
     width: 100%;
+  }
+  /*first block page*/
+
+  .item-photo {
+  	margin-right: auto;
+  }
+  .item-tile .item-price {
+  	text-align: center;
+  }
+  .item-description {
+  	text-align: left;
+  	width: 280px;
+  	margin: auto;
+  	padding-top: 20px;
   }
 }
