--- a/apple/css/style2.css
+++ b/apple/css/style2.css
@@ -1,7 +1,8 @@
 body{
 	background-color: #BAD9D9;
 	font-size: 16px;
-}/**Header**/
+}
+/**Header**/
 #header-nav {
 	background-color:#32838C;
 	border-radius: 0;
@@ -27,11 +28,10 @@ body{
 	line-height: 0.75;
 }
 
-
-/** little logo*/
 .navbar-brand a:hover {
 	text-decoration: none;
 }
+/** little logo*/
 .navbar-brand p {
 	color:#DFF2F2;
 	text-transform: uppercase;
@@ -41,6 +41,8 @@ body{
 .navbar-brand p span {
 	vertical-align: middle;
 }
+
+/**end little logo*/
 #nav-list{
 	margin-top: 10px;
 }
